update frontend functions
